app/assets/stylesheets/brands_home.scss
/* ... */
.popover.bottom .arrow:after {
  border-bottom-color: #ebebeb;
}

.navbar-nav > li > a{
  color: #000000;
  margin: 0 16px;
  padding: 9px 0;
}

.navbar-nav > li:last-child  > a {
  padding: 9px 9px;
}

@media all and (max-width: 767px) {
  .navbar-nav > li > a{
    padding-top: 20px;
  }
}

.header span {
  display: block;
}

.logo {
  float: left;
  position: relative;
  z-index: 1;
  padding-bottom: 5px;
}

.links {
  float: right;
}

ul.menu-item {
  list-style: none;
  float: left;
}

@media (max-width: 749px) {
  ul.menu-item{
    display: none;
  }
}

ul.menu-item li {
  display: inline;
  padding: 0 20px;
}

.menu-item li a {
  color: #333333;
}

.menu-item li.active a {
  color: #00AEEF;
}

.btn-theme {
  background-color: #00aeef;
  border: medium none;
}

.identity {
  background: image-url("Pic1.png") no-repeat scroll center center / cover ;
  height: 620px;
  padding-top: 70px;
  margin-top: 12px;
}

.identity .text-upper {
  font-family: 'Helvetica Neue 35 Thin', sans-serif;
  font-size: 74px;
  letter-spacing: -0.6px;
  padding-top: 135px;
  line-height: 1;
  padding-bottom: 10px;
}

.identity .text-lower {
  font-family: 'Varela', sans-serif;
  font-weight: 500;
  color: #00aeef;
  font-size: 30px;
  line-height: 1.2;
  letter-spacing: -0.6px;
}

.text-get-listed {
  font-family: 'Raleway', sans-serif;
  font-weight: 100;
}

.btn-custom{
  display: inline-block;
  padding: 6px 12px;
  margin-bottom: 0;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.42857143;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -ms-touch-action: manipulation;
  touch-action: manipulation;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #00c9f3;
  border: medium none;
  border-radius: 0;
  height: 38px;
}
.navbar-nav > li > a{
  font-size: 14px;
  font-weight: 500;
}

.navbar-nav > li > a.btn-custom{
  margin-left: 20px;
  margin-right: 0;
  padding: 9px 10px;
  height: 36px;
  font-weight: 600;
  font-size: 13px;
}

.collapsing .navbar-nav > li > a.btn-custom{
  margin-left: 25px;
}
.in .navbar-nav > li > a.btn-custom {
  margin-left: 25px;
  margin-bottom: 5px;
}

.in .navbar-nav, .collapsing .navbar-nav{
  margin: 7.5px -10px
}
.btn-submit {
  background-color: #00c9f3;
  border: medium none;
  border-radius: 0;
  height: 35px;
  width: 111px;
  margin-top: 14px;
}

@media screen and (max-width: 650px) {
  .identity .text-upper {
    font-size: 55px;

  }
}

.statistics {
  background: #333333 none repeat scroll 0 0;
  color: white;
  /*height: 300px;*/
  padding: 65px 0 100px;
  font-family: Helvetica Neue, Roboto, sans-serif;
  font-weight: 300;
}

.statistics .text-top {
  font-size: 30px;
  padding-bottom: 35px;
}

.statistics .stats-block {
  display: inline-block;
  width: 26%;
  text-align: left;
}

@media screen and (max-width: 900px) {
  .statistics .stats-block {
    width: 49%;
    padding-bottom: 20px;
  }
}
@media screen and (max-width: 500px) {
  .statistics .stats-block {
    width: 100%;
    text-align: center
  }
}

.stats-block span {
  display: block;
}

.stats-block .numeric {
  font-size: 44px;
  font-family: 'Varela', sans-serif;
  font-weight: 500;
  line-height: 1;
  padding-bottom: 2px;
}

.stats-block .textual {
  font-size: 20px;
  font-weight: 300;
  padding-left: 4px;
}

.about-us {
  background-image: image-url("Pic2.png");
  background-size: cover;
  background-position: 50%;
  background-repeat: no-repeat;
  padding: 60px 0;
  border-bottom: 1px solid #dcbda1;
  font-weight: 300;
}

.about-us .text-top {
  font-size: 30px;
  font-weight: 300;
  color: #ffffff;
  padding-bottom: 20px;
}

.about-us .text-description {
  color: white;
  font-family: Helvetica Neue,Roboto,sans-serif;
  font-size: 56px;
  font-weight: 200;
  line-height: 1.2;
  margin-top: 15px;
}

@media screen and (max-width: 1010px) {
  .about-us .text-description {
    font-size: 50px;
  }
}

.about-us-block {
  display: inline-block;
  vertical-align: top;
  margin-top: 40px;
  width: 127px;
  margin-right: 50px;
}

.about-us-block span {
  display: block;
  line-height: 1;
  margin-bottom: 16px;
  text-align: left;
}

.about-us-block .textual {
  color: #ffffff;
  font-size: 20px;
  font-family: 'Varela', sans-serif;
  font-weight: 400;
  text-align: center;
}

@media screen and (max-width: 900px) {
  .about-us {
    //padding-right: 20px;
  }
}

@media screen and (max-width: 768px){

  .about-us-block {
    display: inline-block;
    width: 100%;
  }

  .about-us-block span {
    text-align: center;
  }

  .about-us .text-description {
    font-size: 28px;
  }

  .about-us-block .textual {
    padding-left: 0;
    width: auto;
  }
}

.brands {
  padding: 61px 0 100px;
}

.collapsing{
  background-color: #ffffff;
  float: left;
  width: 100%;
}

.brands .text-top {
  font-size: 30px;
  font-weight: 300;
  padding-bottom: 20px;
}

.brands-block span {
  display: inline-block;
  /*float: left;*/
  text-align: left;
  width: 18%;
  vertical-align: top;
}
/*//brand*/
@media screen and (max-width: 900px) {
  .brands {
    //padding-right: 20px;
  }
}

@media screen and (max-width: 768px){
  .brands-block {
    display: inline-block;
  }

  .brands-block span {
    text-align: center;
    width: 100%;
    margin-bottom: 30px;
  }
}

//@media screen and (max-width: 750px) {
//  .brands-block span {
//    width: 30%;
//  }
//  .brands-block {
//    text-align: center;
//  }
//}
//
//@media screen and (max-width: 500px){
//
//  .brands-block span img {
//    width: 75px;
//  }
//}



.contact-us {
  background-image: image-url("Pic3.png");
  background-size: cover;
  background-position: 50%;
  background-repeat: no-repeat;
  -webkit-filter: saturate(1.5);
  filter: saturate(1.5);
}

.contact-form {
  padding: 60px 0;
}

.contact-form .form-control {
  background-color: #f5f6f8;
  border-radius: 2px;
  font-family: Varela;
  padding: 13px 17px;
}
/* ... */

